[package]
name = "stackaddr"
version = "0.0.1"
edition = "2021"
authors = ["shellrow <shellrow@fortnium.com>"]
description = "Self-describing, layered network address representation, with flexible protocol stacks."
keywords = ["network", "address", "protocol", "stack"]
categories = ["network-programming", "data-structures"]
license = "MIT"
repository = "https://github.com/fortnium/stackaddr"
readme = "README.md"

[dependencies]
serde = { version = "1", features = ["derive"] }
anyhow = { version = "1" }
base32 = "0.5"
